<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/holo_blue_light"
        android:orientation="vertical"
        android:paddingBottom="300dp">

        <TextView
            android:id="@+id/PostEditor_symbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:fontFamily="monospace"
            android:text="Post Editor"
            android:textSize="25dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:ems="10"
            android:hint="Enter Title" />

        <EditText
            android:id="@+id/editDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:ems="10"
            android:hint="Enter Description"
            android:inputType="textMultiLine"
            android:overScrollMode="always"
            android:singleLine="false" />

        <TextView
            android:id="@+id/dateSelect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:gravity="center"
            android:text="Select Event Date"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TimeSelect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:gravity="center"
            android:text="Select Event Time"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/PictureDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:fontFamily="casual"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="No pictures chosen yet"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <Button
            android:id="@+id/AddPictureButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="#33FFFFFF"
            android:text="Add Picture" />

        <Button
            android:id="@+id/ClearPicture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="#33FFFFFF"
            android:text="Clear Selected Pictures"
            tools:text="Clear Selected Pictures" />

        <Button
            android:id="@+id/SubmitPost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:background="#33FFFFFF"
            android:text="Submit Post" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog" />

        <Button
            android:id="@+id/saveDraftButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:onClick="onSaveDraft"
            android:text="Save Draft" />

    </LinearLayout>
</ScrollView>