<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#33B5E5"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/MainPageSymbol"
        android:layout_width="289dp"
        android:layout_height="153dp"
        android:layout_marginTop="116dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="USC CampuSee"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Main_LogIn"
        android:layout_width="170dp"
        android:layout_height="70dp"
        android:layout_marginTop="56dp"
        android:background="#33FFFFFF"
        android:onClick="switchToLogIn"
        android:text="Log In"
        android:textColor="@android:color/secondary_text_light"
        android:textSize="30sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Main_Signup"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/Main_Signup"
        android:layout_width="170dp"
        android:layout_height="70dp"
        android:layout_marginTop="280dp"
        android:background="#33FFFFFF"
        android:onClick="switchToSignUp"
        android:text="Sign up"
        android:textColor="@android:color/secondary_text_light"
        android:textSize="30sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>