<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    tools:context=".NormalUserDashboardActivity">

    <Button
        android:id="@+id/viewpublishers"
        android:layout_width="413dp"
        android:layout_height="80dp"
        android:layout_marginTop="200dp"
        android:background="#33FFFFFF"
        android:onClick="switchtoUserPublisherList"
        android:text="View Publishers"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/editInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/editInfo"
        android:layout_width="413dp"
        android:layout_height="80dp"
        android:background="#33FFFFFF"
        android:onClick="editInfo"
        android:text="Edit Info"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/viewevents"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/viewevents"
        android:layout_width="413dp"
        android:layout_height="80dp"
        android:layout_marginTop="272dp"
        android:background="#33FFFFFF"
        android:onClick="switchtoUserEventList"
        android:text="View Events"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.353" />

    <TextView
        android:id="@+id/follow"
        android:layout_width="340dp"
        android:layout_height="129dp"
        android:gravity="center"
        android:text="Following"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.027" />

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#33FFFFFF"
        android:onClick="switchToMain"
        android:text="log out"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.84" />

</androidx.constraintlayout.widget.ConstraintLayout>